--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "## Contributers - Chester Coloma - Christian Tojot - Paul Brown - David Danilchik",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "init:config": "sequelize init:config",
+    "db:create": "sequelize db:create",
+    "watch": "NODE_ENV=development nodemon index.js",
+    "test:watch": "NODE_ENV=test jest --watchAll",
+    "test": "NODE_ENV=test jest"
+    
   },
   "keywords": [],
   "author": "",
